[gd_scene load_steps=2 format=3 uid="uid://05dw4uiuesle"]

[ext_resource type="Script" uid="uid://wg5rlywfepmi" path="res://scripts/ui/TalentNode.gd" id="1_wk6jf"]

[node name="TalentNode" type="Button"]
custom_minimum_size = Vector2(64, 64)
offset_right = 8.0
offset_bottom = 8.0
script = ExtResource("1_wk6jf")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="NameLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="RankLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
